# text2number

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: ITranslator.hpp  MainApp.h  TextToNumberTranslator.h  TextTools.hpp
src/: CMakeLists.txt  MainApp.cpp  TextToNumberTranslator.cpp  main.cpp
test/: CMakeLists.txt  TextToNumberTranslatorTests.cpp  main.cpp
